syntax = "proto3";

option java_multiple_files = true;

package vn.whatsenglish;

message GetProductInfoRequestDto {
    int32 productId = 1;
}

message ProductCategory {
    int32 id = 1;
    string name = 2;
    int32 code = 3;
    string description = 4;
}
message Images {
    int32 id = 1;
    string url = 2;
}
message ProductInfoResponseDto {
    int32 id = 1;
    string displayName = 2;
    float price = 3;
    float displayPrice = 4;
    string description = 5;
    string thumbnail = 6;
    ProductCategory productCategory = 7;
    repeated Images images = 8;
}

//

message CreateDiscountRequestDto {
    string nameDiscount = 1;
    string description = 2;
    string codeDiscount = 3;
    int32 percentageDiscount = 4;
    float fixedDiscount = 5;
    int32 discountCategory = 6;
}

//

message AddDiscountToProductRequestDto {
    int32 productId = 1;
    repeated int32 discountIds = 2;
}

//

message CreateProductRequestDto {
    int32 productCategoryId = 1;
    string displayName = 2;
    float price = 3;
    string description = 4;
    string thumbnail = 5;
    repeated string imageUrls = 6;
}

//

message DiscountResponseDto {
    int32 id = 1;
    string nameDiscount = 2;
    string description = 3;
    string codeDiscount = 4;
    int32 percentageDiscount = 5;
    float fixedDiscount = 6;
    int32 discountCategoryId = 7;
}

message AddDiscountResponseDto {

}

service ProductService {
    rpc getProductById(GetProductInfoRequestDto) returns (ProductInfoResponseDto);
    rpc createProduct(CreateProductRequestDto) returns (ProductInfoResponseDto);
    rpc addDiscountToProduct(AddDiscountToProductRequestDto) returns (AddDiscountResponseDto);
    rpc createDiscount(CreateDiscountRequestDto) returns (DiscountResponseDto);
}